--- a/report/7-multimedia/index.tex
+++ b/report/7-multimedia/index.tex
@@ -3,8 +3,105 @@
 \graphicspath{{7-multimedia/images/}}
 
 \section{Exercise 1}
+
+\begin{figure}[H]
+  \caption{Exercise 1 - Table created}
+  \centering
+  \includegraphics[width=\textwidth]{ex1}
+\end{figure}
+
+\clearpage
 \section{Exercise 2}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/7-multimedia/ex2.html}
+
+\captionsetup{type=figure}\captionof{figure}{ex2.html}
+\subfile{pyg/src/7-multimedia/ex2}
+
+\captionsetup{type=figure}\captionof{figure}{ex2-savemonster.php}
+\subfile{pyg/src/7-multimedia/ex2-savemonster}
+
+\begin{figure}[H]
+  \caption{Exercise 2 - Upload form}
+  \centering
+  \includegraphics[width=\textwidth]{ex2-1upload}
+\end{figure}
+
+\begin{figure}[H]
+  \caption{Exercise 2 - Uploaded data}
+  \centering
+  \includegraphics[width=\textwidth]{ex2-2uploaded}
+\end{figure}
+
+\begin{figure}[H]
+  \caption{Exercise 2 - Data added to table}
+  \centering
+  \includegraphics[width=\textwidth]{ex2-3result}
+\end{figure}
+
+\clearpage
 \section{Exercise 3}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/7-multimedia/ex3-getjpg.php?id=1}\\\\
+\url{https://intweb.bucks.ac.uk/~21606555/oos/7-multimedia/ex3-getwav.php?id=1}\\\\
+\url{https://intweb.bucks.ac.uk/~21606555/oos/7-multimedia/ex3-displaymonster.php}
+
+\captionsetup{type=figure}\captionof{figure}{ex3-getjpg.php}
+\subfile{pyg/src/7-multimedia/ex3-getjpg}
+
+\clearpage
+\captionsetup{type=figure}\captionof{figure}{ex3-getwav.php}
+\subfile{pyg/src/7-multimedia/ex3-getwav}
+
+\captionsetup{type=figure}\captionof{figure}{ex3-displaymonster.php}
+\subfile{pyg/src/7-multimedia/ex3-displaymonster}
+
+\begin{figure}[H]
+  \caption{Exercise 3 - Displaying image from database}
+  \centering
+  \includegraphics[width=\textwidth]{ex3-image}
+\end{figure}
+
+\begin{figure}[H]
+  \caption{Exercise 3 - Displaying monster from database}
+  \centering
+  \includegraphics[width=\textwidth]{ex3-display}
+\end{figure}
+
+\clearpage
 \section{Exercise 4}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/7-multimedia/ex4-displaymonster.php}
+
+\captionsetup{type=figure}\captionof{figure}{ex4-displaymonster.php}
+\subfile{pyg/src/7-multimedia/ex4-displaymonster}
+
+\begin{figure}[H]
+  \caption{Exercise 4 - Displaying all monsters in the database}
+  \centering
+  \includegraphics[width=\textwidth]{ex4}
+\end{figure}
+
+\clearpage
 \section{Exercise 5}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/7-multimedia/ex5.php}
+
+\captionsetup{type=figure}\captionof{figure}{ex5.php}
+\subfile{pyg/src/7-multimedia/ex5}
+
+\begin{figure}[H]
+  \caption{Exercise 5 - Combining the image and audio scripts (image)}
+  \centering
+  \includegraphics[width=\textwidth]{ex5-image}
+\end{figure}
+
+\begin{figure}[H]
+  \caption{Exercise 5 - Combining the image and audio scripts (audio)}
+  \centering
+  \includegraphics[width=\textwidth]{ex5-audio}
+\end{figure}
+
+\clearpage
 \section{Exercise 6}
+\fxwarning{TODO}
