--- a/report/8-db-testing/index.tex
+++ b/report/8-db-testing/index.tex
@@ -3,7 +3,72 @@
 \graphicspath{{8-db-testing/images/}}
 
 \section{Exercise 1}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/8-db-testing/ex1.php}
+
+\captionsetup{type=figure}\captionof{figure}{ex1.php}
+\subfile{pyg/src/8-db-testing/ex1}
+
+\begin{figure}[H]
+  \caption{Exercise 1 - Lotto numbers output}
+  \centering
+  \includegraphics[width=\textwidth]{ex1-1}
+\end{figure}
+
+\begin{figure}[H]
+  \caption{Exercise 1 - Checking randomness}
+  \centering
+  \includegraphics[width=\textwidth]{ex1-2}
+\end{figure}
+
 \section{Exercise 2}
+
+\begin{figure}[H]
+  \caption{Exercise 2 - Lotto table created}
+  \centering
+  \includegraphics[width=\textwidth]{ex2}
+\end{figure}
+
+\clearpage
 \section{Exercise 3}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/8-db-testing/ex3.php}
+
+\captionsetup{type=figure}\captionof{figure}{ex3.php}
+\subfile{pyg/src/8-db-testing/ex3}
+
+\begin{figure}[H]
+  \caption{Exercise 3 - Lotto numbers and saving to database}
+  \centering
+  \includegraphics[width=\textwidth]{ex3-numbers}
+\end{figure}
+
+\begin{figure}[H]
+  \caption{Exercise 3 - Data in database}
+  \centering
+  \includegraphics[width=\textwidth]{ex3-db}
+\end{figure}
+
+\clearpage
 \section{Exercise 4}
+
+\url{https://intweb.bucks.ac.uk/~21606555/oos/8-db-testing/ex4.php}
+
+\captionsetup{type=figure}\captionof{figure}{ex4.php}
+\subfile{pyg/src/8-db-testing/ex4}
+
+\begin{figure}[H]
+  \caption{Exercise 4 - Selecting from weeks in database}
+  \centering
+  \includegraphics[width=\textwidth]{ex4-select}
+\end{figure}
+
+\begin{figure}[H]
+  \caption{Exercise 4 - Displaying lotto numbers from the selected week}
+  \centering
+  \includegraphics[width=\textwidth]{ex4-result}
+\end{figure}
+
+\clearpage
 \section{Exercise 5}
+\fxwarning{TODO}
