--- a/report/6-db-functions/index.tex
+++ b/report/6-db-functions/index.tex
@@ -14,7 +14,7 @@
 \subfile{pyg/src/6-db-functions/ex1-action}
 
 \begin{figure}[H]
-  \caption{Exercise 1 - Result}
+  \caption{Result}
   \centering
   \includegraphics[width=\textwidth]{ex1}
 \end{figure}
@@ -32,13 +32,13 @@
 \subfile{pyg/src/6-db-functions/ex2-action}
 
 \begin{figure}[H]
-  \caption{Exercise 2 - List of users}
+  \caption{List of users}
   \centering
   \includegraphics[width=\textwidth]{ex2-1list}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 2 - Editing a user}
+  \caption{Editing a user}
   \centering
   \includegraphics[width=\textwidth]{ex2-2edit}
 \end{figure}
@@ -50,37 +50,36 @@
 \subfile{pyg/src/6-db-functions/ex3-action}
 
 \begin{figure}[H]
-  \caption{Exercise 3 - Updated the user from exercise 2}
+  \caption{Updated the user from exercise 2}
   \centering
   \includegraphics[width=\textwidth]{ex3-1update}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 3 - User data has been updated}
+  \caption{User data has been updated}
   \centering
   \includegraphics[width=\textwidth]{ex3-2result}
 \end{figure}
 
-\clearpage
 \section{Exercise 4}
 
 \captionsetup{type=figure}\captionof{figure}{ex4-action.php}
 \subfile{pyg/src/6-db-functions/ex4-action}
 
 \begin{figure}[H]
-  \caption{Exercise 4 - Ability to delete users}
+  \caption{Ability to delete users}
   \centering
   \includegraphics[width=\textwidth]{ex4-1list}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 4 - Deleting a user}
+  \caption{Deleting a user}
   \centering
   \includegraphics[width=\textwidth]{ex4-2delete}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 4 - List without deleted users}
+  \caption{List without deleted users}
   \centering
   \includegraphics[width=\textwidth]{ex4-3result}
 \end{figure}
@@ -97,7 +96,7 @@
 \subfile{pyg/src/6-db-functions/ex5}
 
 \begin{figure}[H]
-  \caption{Exercise 5 - Output}
+  \caption{Output}
   \centering
   \includegraphics[width=\textwidth]{ex5}
 \end{figure}
@@ -114,7 +113,7 @@
 \subfile{pyg/src/6-db-functions/ex6}
 
 \begin{figure}[H]
-  \caption{Exercise 6 - Output}
+  \caption{Output}
   \centering
   \includegraphics[width=\textwidth]{ex6}
 \end{figure}
@@ -131,7 +130,7 @@
 \subfile{pyg/src/6-db-functions/ex7}
 
 \begin{figure}[H]
-  \caption{Exercise 7 - Output}
+  \caption{Output}
   \centering
   \includegraphics[width=\textwidth]{ex7}
 \end{figure}
@@ -148,7 +147,7 @@
 \subfile{pyg/src/6-db-functions/ex8}
 
 \begin{figure}[H]
-  \caption{Exercise 8 - Output}
+  \caption{Output}
   \centering
   \includegraphics[width=\textwidth]{ex8}
 \end{figure}
