--- a/report/7-multimedia/index.tex
+++ b/report/7-multimedia/index.tex
@@ -5,7 +5,7 @@
 \section{Exercise 1}
 
 \begin{figure}[H]
-  \caption{Exercise 1 - Table created}
+  \caption{Table created}
   \centering
   \includegraphics[width=\textwidth]{ex1}
 \end{figure}
@@ -22,19 +22,19 @@
 \subfile{pyg/src/7-multimedia/ex2-savemonster}
 
 \begin{figure}[H]
-  \caption{Exercise 2 - Upload form}
+  \caption{Upload form}
   \centering
   \includegraphics[width=\textwidth]{ex2-1upload}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 2 - Uploaded data}
+  \caption{Uploaded data}
   \centering
   \includegraphics[width=\textwidth]{ex2-2uploaded}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 2 - Data added to table}
+  \caption{Data added to table}
   \centering
   \includegraphics[width=\textwidth]{ex2-3result}
 \end{figure}
@@ -57,13 +57,13 @@
 \subfile{pyg/src/7-multimedia/ex3-displaymonster}
 
 \begin{figure}[H]
-  \caption{Exercise 3 - Displaying image from database}
+  \caption{Displaying image from database}
   \centering
   \includegraphics[width=\textwidth]{ex3-image}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 3 - Displaying monster from database}
+  \caption{Displaying monster from database}
   \centering
   \includegraphics[width=\textwidth]{ex3-display}
 \end{figure}
@@ -77,7 +77,7 @@
 \subfile{pyg/src/7-multimedia/ex4-displaymonster}
 
 \begin{figure}[H]
-  \caption{Exercise 4 - Displaying all monsters in the database}
+  \caption{Displaying all monsters in the database}
   \centering
   \includegraphics[width=\textwidth]{ex4}
 \end{figure}
@@ -91,17 +91,24 @@
 \subfile{pyg/src/7-multimedia/ex5}
 
 \begin{figure}[H]
-  \caption{Exercise 5 - Combining the image and audio scripts (image)}
+  \caption{Combining the image and audio scripts (image)}
   \centering
   \includegraphics[width=\textwidth]{ex5-image}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 5 - Combining the image and audio scripts (audio)}
+  \caption{Combining the image and audio scripts (audio)}
   \centering
   \includegraphics[width=\textwidth]{ex5-audio}
 \end{figure}
 
 \clearpage
 \section{Exercise 6}
-\fxwarning{TODO}
+
+Sequence diagram of the script created in Exercise 5 being used.
+
+\begin{figure}[H]
+  \caption{UML Sequence Diagram}
+  \centering
+  \includegraphics[width=1.25\textwidth]{sequence-diagram}
+\end{figure}
