--- a/report/8-db-testing/index.tex
+++ b/report/8-db-testing/index.tex
@@ -10,13 +10,13 @@
 \subfile{pyg/src/8-db-testing/ex1}
 
 \begin{figure}[H]
-  \caption{Exercise 1 - Lotto numbers output}
+  \caption{Lotto numbers output}
   \centering
   \includegraphics[width=\textwidth]{ex1-1}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 1 - Checking randomness}
+  \caption{Checking randomness}
   \centering
   \includegraphics[width=\textwidth]{ex1-2}
 \end{figure}
@@ -24,7 +24,7 @@
 \section{Exercise 2}
 
 \begin{figure}[H]
-  \caption{Exercise 2 - Lotto table created}
+  \caption{Lotto table created}
   \centering
   \includegraphics[width=\textwidth]{ex2}
 \end{figure}
@@ -38,13 +38,13 @@
 \subfile{pyg/src/8-db-testing/ex3}
 
 \begin{figure}[H]
-  \caption{Exercise 3 - Lotto numbers and saving to database}
+  \caption{Lotto numbers and saving to database}
   \centering
   \includegraphics[width=\textwidth]{ex3-numbers}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 3 - Data in database}
+  \caption{Data in database}
   \centering
   \includegraphics[width=\textwidth]{ex3-db}
 \end{figure}
@@ -58,13 +58,13 @@
 \subfile{pyg/src/8-db-testing/ex4}
 
 \begin{figure}[H]
-  \caption{Exercise 4 - Selecting from weeks in database}
+  \caption{Selecting from weeks in database}
   \centering
   \includegraphics[width=\textwidth]{ex4-select}
 \end{figure}
 
 \begin{figure}[H]
-  \caption{Exercise 4 - Displaying lotto numbers from the selected week}
+  \caption{Displaying lotto numbers from the selected week}
   \centering
   \includegraphics[width=\textwidth]{ex4-result}
 \end{figure}
