--- a/report/1-week-1/index.tex
+++ b/report/1-week-1/index.tex
@@ -39,6 +39,7 @@
   \includegraphics[width=\textwidth]{ex3}
 \end{figure}
 
+\clearpage
 \section{Exercise 4}
 
 The last argument of \texttt{gmddate()\texttt} allows you to provide a specific date to format. This argument is optional and will use the current date and time if it is not provided.\\
@@ -78,6 +79,7 @@ The last argument of \texttt{gmddate()\texttt} allows you to provide a specific 
   \includegraphics[width=\textwidth]{ex6}
 \end{figure}
 
+\clearpage
 \section{Exercise 7}
 
 \url{https://intweb.bucks.ac.uk/~21606555/oos/1-week-1/ex7.php}
