--- a/report/2-syntax/index.tex
+++ b/report/2-syntax/index.tex
@@ -16,6 +16,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
   \includegraphics[width=\textwidth]{ex1}
 \end{figure}
 
+\clearpage
 \section{Exercise 2}
 
 \url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex2.php}
@@ -28,6 +29,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
   \includegraphics[width=\textwidth]{ex2}
 \end{figure}
 
+\clearpage
 \section{Exercise 3}
 
 \url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex3.php}
@@ -40,6 +42,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
   \includegraphics[width=\textwidth]{ex3}
 \end{figure}
 
+\clearpage
 \section{Exercise 4}
 
 \url{https://intweb.bucks.ac.uk/~21606555/oos/2-syntax/ex4.php}
@@ -65,6 +68,7 @@ Converted the shorthand PHP tags (\texttt{<?...?>}) to \texttt{<?php...?>} as In
   \includegraphics[width=\textwidth]{ex5}
 \end{figure}
 
+\clearpage
 \section{Exercise 6}
 
 If an index position isn't specified when assigning a value to an array then the value is inserted after the last index position in the array. In this case, $76$ is inserted into the 4th index.\\
@@ -79,6 +83,7 @@ If an index position isn't specified when assigning a value to an array then the
   \includegraphics[width=\textwidth]{ex6}
 \end{figure}
 
+\clearpage
 \section{Exercise 7}
 
 11 lines will be displayed as it will loop from 0 until it reaches 10.\\
@@ -136,6 +141,7 @@ This has been revised to be displayed in a table from the exercise 12 task.\\
   \includegraphics[width=\textwidth]{ex10}
 \end{figure}
 
+\clearpage
 \section{Exercise 11}
 
 I opted to use the \texttt{sizeof} function to calculate the averages so that the average will always be correct if marks are removed or added to the array.\\
