--- a/report/5-oophp-mysql/index.tex
+++ b/report/5-oophp-mysql/index.tex
@@ -13,7 +13,7 @@
 \subfile{pyg/src/5-oophp-mysql/index}
 
 \begin{figure}[H]
-  \caption{Exercise 1 - Result}
+  \caption{Result}
   \centering
   \includegraphics[width=\textwidth]{ex1}
 \end{figure}
@@ -21,7 +21,7 @@
 \section{Exercise 2}
 
 \begin{figure}[H]
-  \caption{Exercise 2 - Test table created}
+  \caption{Test table created}
   \centering
   \includegraphics[width=\textwidth]{ex2}
 \end{figure}
@@ -29,7 +29,7 @@
 \section{Exercise 3}
 
 \begin{figure}[H]
-  \caption{Exercise 3 - Added row to table}
+  \caption{Added row to table}
   \centering
   \includegraphics[width=\textwidth]{ex3}
 \end{figure}
@@ -37,7 +37,7 @@
 \section{Exercise 4}
 
 \begin{figure}[H]
-  \caption{Exercise 4 - Searching for Bugs Bunny}
+  \caption{Searching for Bugs Bunny}
   \centering
   \includegraphics[width=\textwidth]{ex4}
 \end{figure}
@@ -45,7 +45,7 @@
 \section{Exercise 5}
 
 \begin{figure}[H]
-  \caption{Exercise 5 - Adding more rows to test table}
+  \caption{Adding more rows to test table}
   \centering
   \includegraphics[width=\textwidth]{ex5}
 \end{figure}
@@ -53,7 +53,7 @@
 \section{Exercise 6}
 
 \begin{figure}[H]
-  \caption{Exercise 6 - Searching for all Bugs Bunny}
+  \caption{Searching for all Bugs Bunny}
   \centering
   \includegraphics[width=\textwidth]{ex6}
 \end{figure}
@@ -61,7 +61,7 @@
 \section{Exercise 7}
 
 \begin{figure}[H]
-  \caption{Exercise 7 - Deleting a row}
+  \caption{Deleting a row}
   \centering
   \includegraphics[width=\textwidth]{ex7}
 \end{figure}
@@ -69,7 +69,7 @@
 \section{Exercise 8}
 
 \begin{figure}[H]
-  \caption{Exercise 8 - Modifying cells in tables}
+  \caption{Modifying cells in tables}
   \centering
   \includegraphics[width=\textwidth]{ex8}
 \end{figure}
