--- a/report/frontmatter/cover.tex
+++ b/report/frontmatter/cover.tex
@@ -4,15 +4,14 @@
   Open Source Systems\\
   \vspace*{.65cm}\huge Logbook\\
   % begin draft notice
-  \vspace*{.65cm}\large\textcolor{red}{Draft \subfile{pyg/commit-hash}}\\
-  \textcolor{red}{\DTMnow}\\
-  \vspace*{.65cm}\normalsize\textcolor{red}{Changes since this draft}\\
-  \textcolor{red}{\texttt{https://github.com/wopian/hibari-api/compare/\subfile{pyg/commit-hash}\unskip...master}}
+  %vspace*{.65cm}\large\textcolor{red}{Draft \subfile{pyg/commit-hash}}\\
+  %\textcolor{red}{\DTMnow}\\
+  %\vspace*{.65cm}\normalsize\textcolor{red}{Changes since this draft}\\
+  %\textcolor{red}{\texttt{https://github.com/wopian/hibari-api/compare/\subfile{pyg/commit-hash}\unskip...master}}
   % end draft notice
   \vfill
 }
 \author{
-  James Harris\\
   \textit{21606555}
 }
 \date{
