feat: add section 8 exercise 5

--- a/report/8-db-testing/index.tex
+++ b/report/8-db-testing/index.tex
@@ -71,4 +71,9 @@
 
 \clearpage
 \section{Exercise 5}
-\fxwarning{TODO}
+
+\begin{figure}[H]
+  \caption{Design for the lotto results page with navigation to prev/next week}
+  \centering
+  \includegraphics[width=\textwidth]{ex5}
+\end{figure}
