chore: final formatting

--- a/report/3-forms/index.tex
+++ b/report/3-forms/index.tex
@@ -70,6 +70,7 @@ This happens as the \texttt{break} keyword is used to exit the switch statement.
 \captionsetup{type=figure}\captionof{figure}{ex3.html}
 \subfile{pyg/src/3-forms/ex3}
 
+\clearpage
 \captionsetup{type=figure}\captionof{figure}{ex3-action.php}
 \subfile{pyg/src/3-forms/ex3-action}
 
