--- a/report/5-oophp-mysql/index.tex
+++ b/report/5-oophp-mysql/index.tex
@@ -9,6 +9,7 @@
 \captionsetup{type=figure}\captionof{figure}{class\_lib.php}
 \subfile{pyg/src/5-oophp-mysql/class_lib}
 
+\clearpage
 \captionsetup{type=figure}\captionof{figure}{index.php}
 \subfile{pyg/src/5-oophp-mysql/index}
 
